testdata/golden/sema/invalid/ownership/task_await_use_after_move.fmt
async fn compute(x: int) -> int {
    return x;
}

pub async fn test_use_after_move() -> int {
    let t = task compute(1);
    let r1: int = compare t.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
    let r2: int = compare t.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
    return r1 + r2;
}
